@@ -1,3 +1,7 @@
+2004-03-09	blytkerchan
+	* increment.c (atomic_increment): re-implement so it'll work when not optimizing
+	* decrement.c (atomic_decrement): ditto
+
 2004-02-03	blytkerchan
 	* increment.c (atomic_increment): don't return a value
 	* decrement.c (atomic_decrement): ditto
